--- a/README
+++ b/README
@@ -5,6 +5,10 @@ Folly is an open-source C++ library developed and used at Facebook.
 
 For details, see folly/docs/Overview.md.
 
+Folly is published on Github at https://github.com/facebook/folly; for
+discussions, there is a Google group at
+https://groups.google.com/d/forum/facebook-folly.
+
 Dependencies
 ------------
 
