Fix build and test.
Summary:
Fix bug in FBStringTest (don't reuse the same file name)

Don't use VLOG, as that requires that glog is compiled with gflags
support, which it isn't always.

Add other targets and tests, make all tests pass.

Test Plan: tests

Reviewed By: delong.j@fb.com

FB internal diff: D493018

--- a/README
+++ b/README
@@ -40,6 +40,7 @@ Dependencies
     - g++
     - automake
     - autoconf
+    - autoconf-archive
     - libtool
     - libboost1.46-all-dev
     - libgoogle-glog-dev
@@ -53,6 +54,7 @@ Dependencies
     - gcc
     - gcc-c++
     - autoconf
+    - autoconf-archive
     - automake
     - boost-devel
     - libtool
