Some opensource build fixes
Summary:
- switch to new versions of ax_boost_*.m4
- versioning in libtool
- better checks in configure.ac

Test Plan: built in an Ubuntu VM

Reviewed By: davejwatson@fb.com

Subscribers: folly@lists

FB internal diff: D1338957

--- a/README
+++ b/README
@@ -46,7 +46,10 @@ Dependencies
     - libgoogle-glog-dev
     - libgflags-dev
     - scons (for double-conversion)
-
+    - binutils-dev      (optional)
+    - libiberty-dev     (optional)
+    - libjemalloc-dev   (optional)
+ 
   Fedora 17 64-bit
     - gcc
     - gcc-c++
