folly OSS fixes: add ThreadName.h and compression
Summary: Also, optionalize dependencies on compression libraries.

Test Plan: fbconfig -r folly && fbmake runtests_opt

Reviewed By: meyering@fb.com

Subscribers: kma, jhj, simpkins, lesha, folly@lists

FB internal diff: D1396573

--- a/README
+++ b/README
@@ -45,6 +45,10 @@ Dependencies
     - libboost1.46-all-dev
     - libgoogle-glog-dev
     - libgflags-dev
+    - liblz4-dev
+    - liblzma-dev
+    - libsnappy-dev
+    - zlib1g-dev
     - scons (for double-conversion)
     - binutils-dev      (optional)
     - libiberty-dev     (optional)
