Update folly/thrift README with tested deps for Ubuntu 13.10 and 14.04
Test Plan: no

Reviewed By: lesha@fb.com

Subscribers: alandau, jhj, kma

FB internal diff: D1434163

--- a/README
+++ b/README
@@ -9,8 +9,62 @@ Folly is published on Github at https://github.com/facebook/folly; for
 discussions, there is a Google group at
 https://groups.google.com/d/forum/facebook-folly.
 
+
 Dependencies
 ------------
+
+folly requires gcc 4.8+ and a version of boost compiled with C++11 support.
+
+Please download googletest from
+https://googletest.googlecode.com/files/gtest-1.6.0.zip and unzip it in the
+folly/test subdirectory.
+
+Ubuntu 13.10
+------------
+
+The following packages are required (feel free to cut and paste the apt-get
+command below):
+
+sudo apt-get install \
+    g++ \
+    automake \
+    autoconf \
+    autoconf-archive \
+    libtool \
+    libboost-all-dev \
+    libevent-dev \
+    libdouble-conversion-dev \
+    libgoogle-glog-dev \
+    libgflags-dev \
+    liblz4-dev \
+    liblzma-dev \
+    libsnappy-dev \
+    make \
+    zlib1g-dev \
+    binutils-dev \
+    libjemalloc-dev \
+    libgtest-dev
+
+Ubuntu 14.04 LTS
+----------------
+
+The packages listed above for Ubuntu 13.10 are required, as well as:
+
+sudo apt-get install \
+    libiberty-dev
+
+The above packages are sufficient for Ubuntu 13.10 and Ubuntu 14.04.
+
+In the folly directory, run
+  autoreconf -ivf
+  ./configure
+  make
+  make check
+  sudo make install
+
+
+Other Linux distributions
+-------------------------
 
 - double-conversion (http://code.google.com/p/double-conversion/)
 
@@ -27,33 +81,8 @@ Dependencies
       [folly/] LDFLAGS=-L<double-conversion>/ CPPFLAGS=-I<double-conversion>/src/
         configure ...
 
-- googletest (Google C++ Testing Framework)
-
-  Grab gtest 1.6.0 from:
-  http://googletest.googlecode.com/files/gtest-1.6.0.zip
-
-  Unzip it inside of the test/ subdirectory.
-
 - additional platform specific dependencies:
 
-  Ubuntu 12.10 64-bit
-    - g++
-    - automake
-    - autoconf
-    - autoconf-archive
-    - libtool
-    - libboost1.46-all-dev
-    - libgoogle-glog-dev
-    - libgflags-dev
-    - liblz4-dev
-    - liblzma-dev
-    - libsnappy-dev
-    - zlib1g-dev
-    - scons (for double-conversion)
-    - binutils-dev      (optional)
-    - libiberty-dev     (optional)
-    - libjemalloc-dev   (optional)
- 
   Fedora 17 64-bit
     - gcc
     - gcc-c++
